# GaitSym5

./: .gitattributes  .gitignore  Library Compilation Notes.txt  README.md  clean.sh  makefile  status.txt
GaitSymQt/: AVIWriter.cpp  AVIWriter.h  AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  DialogAbout.cpp  DialogAbout.h  DialogAbout.ui  DialogAssembly.cpp  DialogAssembly.h  DialogAssembly.ui  DialogBodyBuilder.cpp  DialogBodyBuilder.h  DialogBodyBuilder.ui  DialogConvertFile.cpp  DialogConvertFile.h  DialogConvertFile.ui  DialogCreateMirrorElements.cpp  DialogCreateMirrorElements.h  DialogCreateMirrorElements.ui  DialogCreateTestingDrivers.cpp  DialogCreateTestingDrivers.h  DialogCreateTestingDrivers.ui  DialogDrivers.cpp  DialogDrivers.h  DialogDrivers.ui  DialogGeoms.cpp  DialogGeoms.h  DialogGeoms.ui  DialogGlobal.cpp  DialogGlobal.h  DialogGlobal.ui  DialogInfo.cpp  DialogInfo.h  DialogJoints.cpp  DialogJoints.h  DialogJoints.ui  DialogMarkerExport.cpp  DialogMarkerExport.h  (+97 more)
GaitSymQt/images/Desktop Icon/: dino_cpu.ai  dino_cpu.eps  resize_for_icon.jsx  win_icon.sh
GaitSymQt/images/Shadow Icon/: Shadow Icon.ai
GaitSymQt/images/Wireframe Icon/: Wireframe Icon.ai  rabbit-5872040.ai
GaitSymQt/objects/: cursor.blend  cursor.mtl  cursor.tri  datatarget.blend  datatarget.mtl  datatarget.tri
GaitSymQt/preferences/: default_values.xml
GaitSymQt/templates/: LightsTemplate.xml  NewConfigFileTemplate.xml
MuJoCo/MuJoCoQt/: MuJoCoQt.pro  main.cpp
MuJoCo/mujoco-3.3.0/dependencies/tinyxml2-src/: tinyxml2.h
MuJoCo/mujoco-3.3.0/model/flex/: bunny_with_uv.xml
PhysX/PhysX-105.1-physx-5.3.0/blast/: build.bat  format_code.bat  repo.bat
PhysX/PhysX-105.1-physx-5.3.0/blast/include/shared/NvFoundation/: NvPreprocessor.h
PhysX/PhysX-105.1-physx-5.3.0/blast/tools/packman/bootstrap/: configure.bat
PhysX/PhysX-105.1-physx-5.3.0/physx/include/foundation/: PxPreprocessor.h
PhysX/PhysX-107.0/: README.md
PhysX/PhysX-107.0-physx-5.6.0-flow-2.2.0-blast-5.0.6/flow/: CHANGELOG.md
PhysX/PhysX-107.0-physx-5.6.0-flow-2.2.0-blast-5.0.6/physx/compiler/vc17win64-cpu-only-dynamic-wincrt/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PhysXSDK.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
PhysX/PhysX-107.0-physx-5.6.0-flow-2.2.0-blast-5.0.6/physx/compiler/vc17win64-cpu-only-dynamic-wincrt/sdk_source_bin/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  LowLevel.vcxproj  LowLevel.vcxproj.filters  LowLevelAABB.vcxproj  LowLevelAABB.vcxproj.filters  LowLevelDynamics.vcxproj  LowLevelDynamics.vcxproj.filters  PhysX.sln  PhysX.vcxproj  PhysX.vcxproj.filters  PhysXCharacterKinematic.vcxproj  PhysXCharacterKinematic.vcxproj.filters  (+19 more)
PhysX/PhysX-107.0/physx/include/foundation/: PxMath.h  PxPreprocessor.h
PhysX/PhysXQt/: PhysXLib.pro  PhysXQt.pro  SnippetHelloWorld.cpp  main.cpp  mainwindow.cpp
PhysX/custom_cmake/: LowLevel.cmake  LowLevelAABB.cmake  LowLevelDynamics.cmake  PhysX.cmake  PhysXCharacterKinematic.cmake  PhysXCommon.cmake  PhysXCooking.cmake  PhysXExtensions.cmake  PhysXFoundation.cmake  PhysXPvdSDK.cmake  PhysXTask.cmake  PhysXVehicle.cmake  SceneQuery.cmake  SimulationController.cmake  comment_source_group.py
PhysX/custom_cmake/windows/: LowLevel.cmake  LowLevelAABB.cmake  LowLevelDynamics.cmake  PhysX.cmake  PhysXCharacterKinematic.cmake  PhysXCommon.cmake  PhysXCooking.cmake  PhysXExtensions.cmake  PhysXFoundation.cmake  PhysXPvdSDK.cmake  PhysXTask.cmake  PhysXVehicle.cmake  SceneQuery.cmake  SimulationController.cmake
cgle-c++/cgle-c++/: ExtrusionInternals.cpp  ExtrusionInternals.cpp.orig  ExtrusionInternals.h  ExtrusionInternals.h.orig  ExtrusionLib.cpp  ExtrusionLib.cpp.orig  ExtrusionLib.h  ExtrusionLib.h.orig  GLEmulator.cpp  GLEmulator.h  gleBaseExtrusion.cpp  gleBaseExtrusion.cpp.orig  gleBaseExtrusion.h  gleBaseExtrusion.h.orig  gleConeExtrusion.cpp  gleConeExtrusion.cpp.orig  gleConeExtrusion.h  gleConeExtrusion.h.orig  gleCylinderExtrusion.cpp  gleCylinderExtrusion.cpp.orig  gleCylinderExtrusion.h  gleCylinderExtrusion.h.orig  gleExtrusion.cpp  gleExtrusion.cpp.orig  gleExtrusion.h  gleExtrusion.h.orig  gleHelicoidExtrusion.cpp  gleHelicoidExtrusion.cpp.orig  gleHelicoidExtrusion.h  gleHelicoidExtrusion.h.orig  gleIBeam.cpp  gleIBeam.cpp.orig  gleIBeam.h  gleIBeam.h.orig  gleLatheExtrusion.cpp  gleLatheExtrusion.cpp.orig  gleLatheExtrusion.h  gleLatheExtrusion.h.orig  gleScrew.cpp  gleScrew.cpp.orig  (+30 more)
glextrusion/: GLEmulator.cpp  GLEmulator.h  copy.h  ex_alpha.c  ex_alpha.cpp  ex_angle.c  ex_angle.cpp  ex_cut_round.c  ex_cut_round.cpp  ex_raw.c  ex_raw.cpp  extrude.c  extrude.cpp  extrude.h  gle.h  intersect.cpp  intersect.h  port.h  qmesh.c  rot.h  rot_prince.c  rot_prince.cpp  rotate.c  rotate.cpp  round_cap.c  round_cap.cpp  segment.cpp  segment.h  texgen.c  texgen.cpp  tube_gc.h  urotate.cpp  view.cpp  vvector.h
glextrusion/gle/: gle.h
inno_setup/: installer_script_v1.iss
libgwavi/: avi-utils.c  avi-utils.h  gwavi.c  gwavi_private.h
library_version/: CMakeLists.txt
pocketpy-2.0.4/: pocketpy.c
scripts/: apply_genome.py  test_euler.py
src/: AMotorJoint.cpp  AMotorJoint.h  ArgParse.cpp  ArgParse.h  BallJoint.cpp  BallJoint.h  Body.cpp  Body.h  BoxGeom.cpp  BoxGeom.h  ButterworthFilter.cpp  ButterworthFilter.h  CappedCylinderGeom.cpp  CappedCylinderGeom.h  Colour.cpp  Colour.h  Contact.cpp  Contact.h  Controller.cpp  Controller.h  ConvexGeom.cpp  ConvexGeom.h  CyclicDriver.cpp  CyclicDriver.h  CylinderWrapStrap.cpp  CylinderWrapStrap.h  DampedSpringMuscle.cpp  DampedSpringMuscle.h  DataFile.cpp  DataFile.h  DataTarget.cpp  DataTarget.h  DataTargetMarkerCompare.cpp  DataTargetMarkerCompare.h  DataTargetQuaternion.cpp  DataTargetQuaternion.h  DataTargetScalar.cpp  DataTargetScalar.h  DataTargetVector.cpp  DataTargetVector.h  (+116 more)
terminal/: CMakeLists.txt
threepp/src/threepp/core/: Object3D.cpp
threepp/src/threepp/renderers/: GLRenderer.cpp
threepp/src/threepp/renderers/gl/: GLTextures.cpp
(+137 files in other folders)
